--- a/UserInterface/Resources/newrelic.config
+++ b/UserInterface/Resources/newrelic.config
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
-<!-- Copyright (c) 2008-2014 New Relic, Inc.  All rights reserved. -->
+<!-- Copyright (c) 2008-2019 New Relic, Inc.  All rights reserved. -->
 <!-- For more information see: https://newrelic.com/docs/dotnet/dotnet-agent-configuration -->
 <configuration xmlns="urn:newrelic-config" agentEnabled="true">
-	<service licenseKey="REPLACE_WITH_LICENSE_KEY" ssl="true" />
+	<service licenseKey="REPLACE_WITH_LICENSE_KEY" />
 	<application>
 		<name>My Application</name>
 	</application>
@@ -11,7 +11,7 @@
 		transactionThreshold="apdex_f"
 		stackTraceThreshold="500"
 		recordSql="obfuscated"
-		explainEnabled="true"
+		explainEnabled="false"
 		explainThreshold="500"/>
 	<crossApplicationTracer enabled="true"/>
 	<errorCollector enabled="true">
@@ -26,6 +26,7 @@
 	</errorCollector>
 	<browserMonitoring autoInstrument="true" />
 	<threadProfiling>
-		<ignoreMethod>NewRelic.Agent.Core.HarvesterService:ThreadSleep</ignoreMethod>
+		<ignoreMethod>System.Threading.WaitHandle:InternalWaitOne</ignoreMethod>
+		<ignoreMethod>System.Threading.WaitHandle:WaitAny</ignoreMethod>
 	</threadProfiling>
 </configuration>
